bar: prevent label overflow

--- a/src/charts/BarChart/BarChart.css
+++ b/src/charts/BarChart/BarChart.css
@@ -29,6 +29,8 @@
     position: absolute;
     top: calc(100% + 1em);
     text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .chartsy-bar-live:hover .chartsy-bar-column:not(:hover) {
